WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54577
[Qt] Tiles are not created for webkit2 after
r77286
.
https://bugs.webkit.org/show_bug.cgi?id=54577
Summary
[Qt] Tiles are not created for webkit2 after r77286.
Yael
Reported
2011-02-16 12:47:51 PST
When using the default tile size of 1024x1024, only one tile is created. What seems to be a typo in
r77286
causes this one tile to not be created. A patch is coming soon.
Attachments
Patch.
(2.87 KB, patch)
2011-02-16 12:52 PST
,
Yael
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yael
Comment 1
2011-02-16 12:52:57 PST
Created
attachment 82679
[details]
Patch.
Andreas Kling
Comment 2
2011-02-16 13:03:29 PST
Comment on
attachment 82679
[details]
Patch. D'oh! r=me
WebKit Commit Bot
Comment 3
2011-02-16 18:56:25 PST
Comment on
attachment 82679
[details]
Patch. Rejecting
attachment 82679
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-7', 'land-a..." exit_code: 1 Last 500 characters of output: ommit-queue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 57, in run if self._has_valid_reviewer(changelog_entry): File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 42, in _has_valid_reviewer if changelog_entry.reviewer(): AttributeError: 'NoneType' object has no attribute 'reviewer' Full output:
http://queues.webkit.org/results/7927453
WebKit Commit Bot
Comment 4
2011-02-16 20:27:20 PST
Comment on
attachment 82679
[details]
Patch. Clearing flags on attachment: 82679 Committed
r78783
: <
http://trac.webkit.org/changeset/78783
>
WebKit Commit Bot
Comment 5
2011-02-16 20:27:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug